# src/common/routes/web.routes.js
@@ -2,10 +2,14 @@ import express from "express";
 
 import authroutes from '../../web/Auth/auth.routes.js';
 import productsRoutes from '../../web/products/products.routes.js';
+import addressesRoutes from '../../web/addresses/addresses.routes.js';
+import cartRoutes from '../../web/cart/cart.routes.js';
 
 const router = express.Router();
 
 router.use('/auth', authroutes);
 router.use('/products', productsRoutes);
+router.use('/addresses', addressesRoutes);
+router.use('/cart', cartRoutes);
 
 export default router;
